Sun Jul 24 00:05:00 2011  Jeremy Evans  <merch-redmine@jeremyevans.net>

	* error.c (rb_name_error_str): new function to raise NameError
	  with the name string but not ID.

	* object.c, proc.c, variable.c: more removal of inadvertent symbol
	  creation.  [Feature #5079]

Sat Jul 23 21:14:00 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb (cbrt): should return a real number if possible.

Sat Jul 23 20:12:52 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/rake/test_rake_functional.rb (setup): Use __FILE__ for the base
	  directory. Current directory is not the top source directory when
	  the building process runs on other than there.

	* test/rake/test_rake_rake_test_loader.rb: ditto.

	* test/rake/test_rake_task_argument_parsing.rb
	  (test_terminal_width_using_hardcoded_80): hardcoded 80 is used
	  when app.unix? is false.

Sat Jul 23 20:11:50 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: an issue that is same as  [ruby-dev:44071].
	* ext/date/date_strftime.c: identical to [ruby-dev:44112].

Sat Jul 23 19:12:53 2011  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_err_in_callback.rb (test_err_in_callback): 
	  skip test if ADODB.connection is not available.

Sat Jul 23 15:37:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (rb_enc_symname_type): :$a!, @a! and so on are not
	  valid symbols, so they should be inspected with quotes.

Sat Jul 23 17:06:25 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): validate fd.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): add
	  msg_peek_p argument for the declaration.

	* ext/socket/ancdata.c (discard_cmsg): add msg_peek_p argument.
	  assume FreeBSD, NetBSD and MacOS X doesn't generate passed fd
	  when MSG_PEEK. 
	  (rsock_discard_cmsg_resource): add msg_peek_p argument.
	  (bsock_recvmsg_internal): call rsock_discard_cmsg_resource with
	  msg_peek_p argument.

	* ext/socket/unixsocket.c (unix_recv_io): call