@@ -1,3 +1,8 @@
+Sun Jul 24 01:04:50 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/specification.rb:  Restore behavior of
+	  Gem::Specification#loaded.  [Ruby 1.9 - Bug #5032]
+
 Sun Jul 24 00:05:00 2011  Jeremy Evans  <merch-redmine@jeremyevans.net>
 
 	* error.c (rb_name_error_str): new function to raise NameError
